--- a/src/App.css
+++ b/src/App.css
@@ -1,30 +1,62 @@
 :root {
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  line-height: 1.5;
+  font-weight: 400;
 
-    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-    line-height: 1.5;
-    font-weight: 400;
-  
-    color-scheme: light dark;
-    /* color: rgba(255, 255, 255, 0.87); */
-    /* background-color: #242424; */
-  
-    font-synthesis: none;
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    -webkit-text-size-adjust: 100%;
-  
-    --C1: #e69011;
-    --C2: #f34506;
-    --C3: rgb(4, 156, 4);
-    --C4: rgba(7, 92, 204, 0.979);
-    --C5: #33373a;
-    --C6: #242424;
-  
-  }
-  
-  body {
-    margin: auto;
-    /* display: flex; */
+  color-scheme: light dark;
+  /* color: rgba(255, 255, 255, 0.87); */
+  /* background-color: #242424; */
+
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
+
+  --C1: #e69011;
+  --C2: #f34506;
+  --C3: rgb(4, 156, 4);
+  --C4: rgba(7, 92, 204, 0.979);
+  --C5: #33373a;
+  --C6: #242424;
  
-  }
+}
+*{
+  margin:0;
+  padding:0;
+}
+
+body {
+  margin: auto;
+ 
+}
+
+.select{
+  /* height: 200px; */
+  max-height: 198px;
+  color: white;
+  width: fit-content;
+  min-width: 180px;
+  padding: 5px;
+  overflow-y: scroll;
+}
+.select > p {
+  margin: 5px auto auto auto;
+  background: rgb(112, 109, 109);
+  border-radius: 3px;
+  padding: 2px;
+  text-align: center;
+  cursor: pointer;
+}
+
+/* #info-grid{
+  display:flex;
+  background-color:pink;
+
+  height: 500px;
+
+} */
+/* #municipality-health-facilities{
+  align-self: center;
+  justify-self: center;
+} */
