--- a/src/App.css
+++ b/src/App.css
@@ -51,6 +51,11 @@ nav summary:hover,
 ul {
   list-style: none;
 }
+ul > hr {
+  border: none;
+  height: 1px;
+  background: rgba(214, 214, 214, 0.384);
+}
 nav > ul {
   grid-column: 2/3;
   grid-row: 1/3;
@@ -61,10 +66,7 @@ details > summary {
 details > ul {
   padding-left: 20px;
 }
-nav > hr {
-  grid-column: 1/6;
-  grid-row: 5/5;
-}
+
 #logo-parent {
   width: 140px;
   height: 140px;
@@ -78,3 +80,17 @@ nav > hr {
 }
 
 /* navigation pages component css  above.*/
+
+/* home page component css below */
+#homepage {
+  margin: 70px auto auto auto;
+  background: rgba(224, 224, 224, 0.39);
+  width: 50dvw;
+}
+#homepage {
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: center;
+  align-items: center;
+}
+/* home page component css above */
