--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
 
   --C1: #e69011;
   --C2: #f34506;
-  --C3: rgb(4, 156, 4);
+  --C3: rgb(5, 241, 5);
   --C4: rgba(7, 92, 204, 0.979);
   --C5: #33373a;
   --C6: #242424;
@@ -122,7 +122,28 @@ details > ul {
   color: white;
   background: var(--C2);
 }
+#searchby-form > *{
+  cursor: pointer;
+}
+/* #searchby-form > input[type="radio"]{
+appearance: none;
 
+} */
+#searchby-form   input[type="radio"] {
+  display: none;
+}
+#searchby-form   input[type="radio"] + label:before {
+  content: "\2718";
+  display: inline-block;
+  margin: 0 5px 0 5px;
+  color:orangered;
+}
+
+#searchby-form   input[type="radio"]:checked + label:before {
+  content: "\2714";
+  color:var(--C3);
+  margin: 0 5px 0 5px;
+}
 #aboutpage,
 #homepage {
   background: var(--C7);
@@ -142,10 +163,12 @@ details > ul {
   transform: translate(-50%, -50%);
   width: 80dvw;
   /* border:none; */
+  /* background:pink; */
 }
 .dialog-centered > button {
   cursor: pointer;
 }
+
 /* pages component css above */
 footer {
   width: 50dvw;
