--- a/src/App.css
+++ b/src/App.css
@@ -45,6 +45,7 @@ nav > ul > li:nth-child(2) {
 nav summary:hover,
 #services li:hover {
   text-decoration: underline;
+  background-color: var(--C7);
 }
 ul {
   list-style: none;
@@ -54,9 +55,19 @@ ul > hr {
   height: 1px;
   background: rgba(214, 214, 214, 0.384);
 }
+hr {
+  width:55%;
+  margin:auto;
+  float:right;
+  border:none;
+  border-radius:5px;
+  background: linear-gradient(to right, red, orange, yellow, green, blue, indigo, violet);
+  height: 5px;
+}
 nav > ul {
   grid-column: 2/3;
   grid-row: 1/3;
+
 }
 details > summary {
   list-style: none;
