--- a/src/App.css
+++ b/src/App.css
@@ -198,6 +198,9 @@ details > ul {
   height: 30px;
   text-align: center;
 }
+#searchby-form input[type="text"] :focus{
+  border: 1px solid rgb(23, 110, 240);
+}
 #searchby-form input[type="radio"] {
   display: none;
   margin: 5px;
