--- a/src/App.css
+++ b/src/App.css
@@ -142,7 +142,7 @@ details > ul {
   color: white;
   background: var(--C2);
 }
-#close-button,
+.close-button,
 #searchby-form input[type="submit"],
 #searchby-form input[type="reset"] {
   color: white;
@@ -153,7 +153,7 @@ details > ul {
   border-radius: 2px;
   margin: 2px;
 }
-#close-button {
+.close-button {
   background: var(--C8);
   margin-top: 10px;
 }
@@ -164,13 +164,14 @@ details > ul {
   color: white;
   margin-top: 10px;
 }
-#searchby-form {
+#suggestions, #searchby-form {
   background: rgb(255, 254, 254);
   width: 25dvw;
+  min-width:250px;
   padding: 40px;
   border-radius: 4px;
 }
-#dialog-content {
+.dialog-content {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -180,7 +181,7 @@ details > ul {
   justify-content: center;
   align-items: center;
 }
-#dialog-content > button {
+.dialog-content > button {
   cursor: pointer;
 }
 #searchby-form > * {
