--- a/src/App.css
+++ b/src/App.css
@@ -171,6 +171,25 @@ details > ul {
   padding: 40px;
   border-radius: 4px;
 }
+#suggestions{
+  max-height: 300px;
+  overflow-y: scroll;
+  padding:15px 10px 15px 10px;
+}
+#suggestions > p{
+  cursor: pointer;
+  background:var(--C7);
+margin:6px;
+padding:5px;
+}
+#suggestions > p:hover{
+  background:var(--C5);
+  color:whitesmoke;
+  border-radius:3px;
+}
+.dialog-content > h4 {
+  color:white;
+}
 .dialog-content {
   position: absolute;
   top: 50%;
@@ -199,9 +218,10 @@ details > ul {
   height: 30px;
   text-align: center;
 }
-#searchby-form input[type="text"] :focus{
+#searchby-form input[type="text"]:focus{
   border: 1px solid rgb(23, 110, 240);
 }
+
 #searchby-form input[type="radio"] {
   display: none;
   margin: 5px;
