web app inital set up.

--- a/src/App.css
+++ b/src/App.css
@@ -11,13 +11,13 @@
 
   --C1: #e69011;
   --C2: #f34506;
-  --C3: rgb(5, 241, 5);
-  --C4: rgba(7, 92, 204, 0.979);
+  --C3: #05f105;
+  --C4: #075cccfa;
   --C5: #33373a;
   --C6: #242424;
-  --C7: rgba(250, 246, 246, 0.39);
-  --C8: rgba(224, 224, 224, 0.39);
-  --C8: rgb(255, 56, 56);
+  --C7: #faf6f663;
+  --C8: #e0e0e063;
+  --C8: #ff3838;
 }
 /* width */
 ::-webkit-scrollbar {
