--- a/src/App.css
+++ b/src/App.css
@@ -66,8 +66,11 @@ nav > *:not(hr) {
 nav > ul > li:nth-child(2) {
   padding-left: 20px;
 }
-nav summary > span:hover,
-#services li > span:hover {
+nav li {
+  width: 150px;
+}
+nav summary:hover,
+#services li:hover {
   text-decoration: underline;
   background-color: var(--C7);
 }
@@ -297,7 +300,7 @@ footer {
   flex-flow: column-reverse;
   justify-content: center;
   align-items: center;
-  margin:auto;
+  margin: auto;
 }
 footer * {
   margin: 5px;
@@ -357,6 +360,7 @@ footer * {
     width: 40%;
   }
   #facility,
+  #courtpage,
   #sapspage,
   #homepage,
   #aboutpage {
@@ -395,5 +399,4 @@ footer * {
   footer {
     width: 90dvw;
   }
- 
 }
